# cdc-speaker-calibration

./: .gitignore  404.html  README.md  index.html  main.py  main_2.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run.ps1  setup.ps1  sound_generation.py  test.py  tests.py
.github/workflows/: docs.yml
api/protocol/: index.html
api/recording/: index.html
api/settings/: index.html
api/sound/: index.html
api/soundcards/: index.html
config/: config.yml  config_window_init.csv  general_init.csv  hardware.yml  pure_tone_init.csv  settings.yml
config/frames/: calibration_init.csv  psd_init.csv  pt_calibration_init.csv  pt_test_init.csv  test_init.csv
config/schemas/: config-schema.json  hardware-schema.json  settings-schema.json
docs/: index.md  installation.md  latency.md  protocols.md  speaker_calibration.md  usage.md
docs/api/: protocol.md  recording.md  settings.md  sound.md  soundcards.md
installation/: index.html
latency/: index.html
matlab/: Calibrate.m  TestdB.m  calibraTOR1.m  calibrationFactor1.m  fft_intervals.m  init_NI.m  init_PsyTB.m  noise.m  noise_gen_new.py  rec_sound.m  runCalibration2.m  testCalibration2.m
protocols/: index.html
scripts/: analysis.ipynb  measure_db.py  multiple_dispatch_test.py  run_protocol.py  sound_generation.py  test_db.py
speaker_calibration/: calibration_protocols.py  calibration_steps.py  classes.py  configuration_window.py  db_calibration.py  fft_intervals.py  generate_noise.py  generate_sound.py  get_db.py  gui_controller.py  gui_main.py  gui_model.py  gui_test.py  gui_utils.py  gui_view.py  hardware_frame.py  main.py  multi_instrument.py  nidaq_test.py  options_frame.py  plot_frame.py  psd_calibration.py  record_sound.py  test_calibration.py  test_frame.py
speaker_calibration/gui/: calibration_thread.py  config_frame.py  gui_controller.py  gui_main.py  gui_model.py  gui_view.py  hardware_frame.py  plot_frame.py  settings_window.py  test_frame.py
speaker_calibration/gui/controller/: calibration_thread.py
speaker_calibration/protocol/: calibration_protocols.py  calibration_steps.py  classes.py  record_sound.py
speaker_calibration/settings/: hardware.py  input_settings.py
speaker_calibration/utils/: gui_utils.py
src/speaker_calibration/: __main__.py  config.py  gui.py  main.py  new_sound.py  protocol.py  recording.py  settings.py  sound.py  soundcards.py  utils.py
usage/: index.html
(+33 files in other folders)
