[project]
name = "speaker-calibration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "multipledispatch>=1.0.0",
    "nidaqmx>=1.0.1",
    "numpy>=2.1.3",
    "pydantic>=2.10.4",
    "pyharp",
    "pyserial>=3.5",
    "pyyaml>=6.0.2",
    "scipy>=1.14.1",
    "soundcard>=0.4.3",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
]

[tool.uv.sources]
pyharp = { git = "https://github.com/harp-tech/pyharp" }
