[project]
name = "speaker-calibration"
version = "0.1.0"
description = "This project allows to perform calibration of speakers both with white noises or pure tones."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "harp-soundcard>=0.1.0a2",
    "ipykernel>=6.30.0",
    "matplotlib>=3.9.2",
    "moku>=3.3.3",
    "multipledispatch>=1.0.0",
    "nidaqmx>=1.0.1",
    "numpy>=2.1.3",
    "pydantic>=2.10.4",
    "pyserial>=3.5",
    "pyside6>=6.9.0",
    "pyyaml>=6.0.2",
    "scipy>=1.14.1",
    "soundcard>=0.4.3",
    "zeroconf>=0.146.1",
]

[project.scripts]
cli-app = "speaker_calibration.__main__:main"
gui-app = "speaker_calibration.gui.__init__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-github-admonitions-plugin>=0.1.1",
    "mkdocs-include-markdown-plugin>=7.1.6",
    "mkdocs-material>=9.6.14",
    "mkdocstrings-python>=1.16.12",
]
